test/fail/classes/invalid_class_prop_name.lly
#[
SyntaxError: Class properties must start with @.
    from invalid_class_prop_name.lly:6:
]#

class ABC { var a: integer }
